style: css fix for random gap

--- a/packages/appstore/src/components/cfds-listing/cfds-listing.scss
+++ b/packages/appstore/src/components/cfds-listing/cfds-listing.scss
@@ -35,7 +35,7 @@
         background-color: var(--general-main-1);
         @include mobile {
             position: sticky;
-            bottom: 7.2rem;
+            bottom: 6.2rem;
         }
     }
     &__footer-button {
